<resources>
    <string name="app_name">안드로이드 사진 보기</string>
    <string name="action_settings">Settings</string>
    <string name="text1">선택을 시작하겠습니까?</string>
    <string name="swt1">시작함</string>
    <string name="text2">좋아하는 안드로이드 버전은?</string>
    <string name="rb1">젤리빈(4.3)</string>
    <string name="rb2">킷캣(4.4)</string>
    <string name="rb3">롤리팝(5.0)</string>
    <string name="end">종료</string>
    <string name="restart">처음으로</string>
</resources>
